--- a/.gitignore
+++ b/.gitignore
@@ -158,6 +158,10 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# misc stuff
 .DS_Store
 *.sh
 *.db
+*.csv
+assets
